--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -50,7 +50,7 @@ layout: default
                 {% endif %}
 
                 <!-- Friends Blog -->
-                {% if site.friends %}
+<!--                {% if site.friends %}
                 <hr>
                 <h5>FRIENDS</h5>
                 <ul class="list-inline">
@@ -60,7 +60,7 @@ layout: default
                 </ul>
                 {% endif %}
             </div>
-        {% else %}
+        {% else %} -->
 
 <!-- USE SIDEBAR -->
     <!-- Post Container -->
@@ -135,7 +135,7 @@ layout: default
                                 <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa  fa-stack-1x fa-inverse">知</i>
+<!--                                        <i class="fa  fa-stack-1x fa-inverse">知</i> -->
                                     </span>
                                 </a>
                             </li>
