--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <ul class="list-inline text-center">
+               <!--  <ul class="list-inline text-center">
                     {% if site.RSS %}
                     <li>
                         <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
@@ -26,7 +26,7 @@
                     {% endif %}
 
                     <!-- add Weibo, Zhihu by Hux, add target = "_blank" to <a> by Hux -->
-<!--                     {% if site.zhihu_username %}
+                    <!-- {% if site.zhihu_username %}
                     <li>
                         <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
                             <span class="fa-stack fa-lg">
@@ -35,7 +35,7 @@
                             </span>
                         </a>
                     </li>
-                    {% endif %} -->
+                    {% endif %}
                     {% if site.weibo_username %}
                     <li>
                         <a target="_blank" href="http://weibo.com/{{ site.weibo_username }}">
@@ -67,8 +67,8 @@
                             </span>
                         </a>
                     </li>
-                    {% endif %}
-                </ul>
+                    {% endif %} 
+                </ul> -->
                <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
 <!--                    <br>
