--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -109,7 +109,7 @@ layout: default
                             <p>{{site.sidebar-about-description}}</p>
                         {% endif %}
                         <!-- SNS Link -->
-                        <ul class="list-inline">
+<!--                         <ul class="list-inline">
                             {% if site.RSS %}
                             <li>
                                 <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
@@ -140,7 +140,7 @@ layout: default
                                 </a>
                             </li>
                             {% endif %} -->
-                            {% if site.weibo_username %}
+                         <!--    {% if site.weibo_username %}
                             <li>
                                 <a target="_blank" href="http://weibo.com/{{ site.weibo_username }}">
                                     <span class="fa-stack fa-lg">
@@ -170,11 +170,11 @@ layout: default
                                 </a>
                             </li>
                             {% endif %}
-                        </ul>
+                        </ul> -->
                     </div>
                 </section>
                 <!-- Friends Blog -->
-                {% if site.friends %}
+<!--                 {% if site.friends %}
                 <hr>
                 <h5>FRIENDS</h5>
                 <ul class="list-inline">
@@ -184,6 +184,6 @@ layout: default
                 </ul>
                 {% endif %}
     		</div>
-        {% endif %}
+        {% endif %} -->
 	</div>
 </div>
