--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -50,7 +50,7 @@ layout: default
                 {% endif %}
 
                 <!-- Friends Blog -->
-<!--                {% if site.friends %}
+                <!-- {% if site.friends %}
                 <hr>
                 <h5>FRIENDS</h5>
                 <ul class="list-inline">
@@ -58,9 +58,9 @@ layout: default
                         <li><a href="{{friend.href}}">{{friend.title}}</a></li>
                     {% endfor %}
                 </ul>
-                {% endif %}
+                {% endif %} -->
             </div>
-        {% else %} -->
+        {% else %}
 
 <!-- USE SIDEBAR -->
     <!-- Post Container -->
